[package]
name = "mission"
version = "0.1.0"
authors = ["naufil <m.naufil1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syllabus ={path="../syllabus"}
teachers_name={path="../teachers_name"}
time_table = {path = "../administration/time_table"}